# pydantic-settings-toml

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  setup.cfg
src/pydantic_settings_toml/: __init__.py  exceptions.py  main.py  sources.py
